# SysCall

./: CMakeLists.txt  Makefile  main.cpp  syscall
include/: funcionts.h  init.h  manage_errors.h
lib/: functions.cpp  init.cpp  manage_errors.cpp
